cot-cli/tests/snapshot_testing/migration/snapshots/cli__snapshot_testing__migration__migration_list_empty-4.snap
---
source: cot-cli/tests/snapshot_testing/migration/mod.rs
description: "Verbosity level: info"
info:
  program: cot
  args:
    - migration
    - list
    - "-vvv"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
