cot-cli/tests/snapshot_testing/migration/snapshots/cli__snapshot_testing__migration__migration_list_empty.snap
---
source: cot-cli/tests/snapshot_testing/migration/mod.rs
description: "Verbosity level: off"
info:
  program: cot
  args:
    - migration
    - list
    - "-q"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
