cot-cli/tests/snapshot_testing/migration/snapshots/cli__snapshot_testing__migration__migration_list_existing-2.snap
---
source: cot-cli/tests/snapshot_testing/migration/mod.rs
description: "Verbosity level: error"
info:
  program: cot
  args:
    - migration
    - list
    - "-v"
---
success: true
exit_code: 0
----- stdout -----
cot-test-PROJECT-NAME	m_0001_initial

----- stderr -----
