cot-cli/tests/snapshot_testing/migration/snapshots/cli__snapshot_testing__migration__migration_list_existing-5.snap
---
source: cot-cli/tests/snapshot_testing/migration/mod.rs
description: "Verbosity level: debug"
info:
  program: cot
  args:
    - migration
    - list
    - "-vvvv"
---
success: true
exit_code: 0
----- stdout -----
cot-test	m_0001_initial

----- stderr -----
